# SQM_Calculator

./: CMakeLists.txt  SqmModel.cpp  SqmModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
